--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,20 @@
 @import "tailwindcss";
+
+html{
+  scroll-behavior: smooth;
+}
+
+* {
+  font-family:"Noto Sans JP", sans-serif;
+}
+
+span {
+  font-family: inherit;
+  font-weight: inherit;
+}
+
+.myBox{
+  background-size: 40px 40px;
+  background-image: linear-gradient(to right, rgb(174, 175, 129) 1px, transparent 1px),
+                    linear-gradient(to bottom, rgb(174, 175, 129) 1px, transparent 1px);
+}
